--- a/vnext-webapi/Front/Views/Page/dash.cshtml
+++ b/vnext-webapi/Front/Views/Page/dash.cshtml
@@ -2,7 +2,7 @@
 
 
 <h1>
-	Incoming
+	Dashboard
 </h1>
 
 @foreach (var item in Model)
@@ -23,7 +23,7 @@
 
 
 @section Styles{
-	<link rel="Stylesheet" href="./css/Index.css" type="text/css" />
+	<link rel="Stylesheet" href="./css/Dash.css" type="text/css" />
 }
 
 @section Scripts{
