--- a/vnext-webapi/Front/Views/Page/dash.cshtml
+++ b/vnext-webapi/Front/Views/Page/dash.cshtml
@@ -1,13 +1,18 @@
 ﻿@model List<proj.Models.Victim>
 
+<script async defer
+		src="https://maps.googleapis.com/maps/api/js?key=YOUR_API_KEY&callback=initMap">
+</script>
+
 
 <h1>
 	Dashboard
 </h1>
 
+<div class="floaty"> </div>
 @foreach (var item in Model)
 {
-	<h3>@item.Name</h3>
+	@*<h3>@item.Name</h3>
 	<ul>
 		<li>Gender: @item.Gender</li>
 		<li>Age: @item.Age</li>
@@ -17,15 +22,56 @@
 		<li>Has Food: @item.HaveFood</li>
 		<li>Urgency @item.UrgencyLevel</li>
 	</ul>
-	<hr />
+	<hr />*@
+
+	<div class="floaty"> @item.Name | </div>
 }
+<hr />
+
+<body>
+	<div id="map"></div>
+</body>
 
 
 
 @section Styles{
-	<link rel="Stylesheet" href="./css/Dash.css" type="text/css" />
+	<link rel="Stylesheet" href="../css/Dash.css" type="text/css" />
+	<style type="text/css">
+		html, body {
+			height: 100%;
+			margin: 0;
+			padding: 0;
+		}
+
+		#map {
+			height: 100%;
+		}
+	</style>
 }
 
 @section Scripts{
-
+	<script type="text/javascript">
+		var map;
+		function initMap() {
+			map = new google.maps.Map(document.getElementById('map'), {
+				center: { lat: @Model.Last().Location.Split(':')[0].Trim(' '), lng: @Model.Last().Location.Split(':')[1].Trim(' ') },
+				zoom: 8
+			});
+			@foreach (var item in Model)
+			{
+				<text>
+				var myLatLng = { lat:</text> @item.Location.Split(':')[0].Trim(' ') <text>, lng: </text> @item.Location.Split(':')[1].Trim(' ' ) <text> };
+				var marker = new google.maps.Marker({
+					position: myLatLng,
+					map: map,
+					title: "</text>	@item.Name<text>",
+					icon: "https://i.imgur.com/Xk0UmP2.png"
+				});
+				</text>
+			}
+		}
+	</script>
+	<script async defer
+			src="https://maps.googleapis.com/maps/api/js?key=AIzaSyBa66v7AP8dmVeGyjbNglYmwfKq8ad5Uvs&callback=initMap">
+	</script>
 }
