--- a/vnext-webapi/Front/Views/Page/dash.cshtml
+++ b/vnext-webapi/Front/Views/Page/dash.cshtml
@@ -64,8 +64,8 @@
 				var marker = new google.maps.Marker({
 					position: myLatLng,
 					map: map,
-					title: "</text>	@item.Name<text>",
-					icon: "https://i.imgur.com/Xk0UmP2.png"
+					title: "</text>	@item.Location <text>",
+					icon: "https://i.imgur.com/PkXruTN.png"
 				});
 				</text>
 			}
